<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/element_spacing"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:lineSpacingExtra="2dp"
        android:singleLine="false"
        android:text="@string/tool_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/from_scale"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing"
        android:hint="@string/from_scale"
        android:labelFor="@id/from_scale_value"
        app:layout_constraintEnd_toEndOf="@+id/message"
        app:layout_constraintStart_toStartOf="@+id/message"
        app:layout_constraintTop_toBottomOf="@+id/message">

        <AutoCompleteTextView
            android:id="@+id/from_scale_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/to_scale"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing"
        android:hint="@string/to_scale"
        app:layout_constraintEnd_toEndOf="@+id/from_scale"
        app:layout_constraintStart_toStartOf="@+id/from_scale"
        app:layout_constraintTop_toBottomOf="@+id/from_scale">

        <AutoCompleteTextView
            android:id="@+id/to_scale_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/value_container"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing"
        android:hint="@string/value_to_convert"
        app:layout_constraintEnd_toEndOf="@+id/to_scale"
        app:layout_constraintStart_toStartOf="@+id/to_scale"
        app:layout_constraintTop_toBottomOf="@+id/to_scale">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_more_spacing"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_container" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintBaseline_toBaselineOf="@+id/result"
        app:layout_constraintStart_toStartOf="@+id/value_container" />

    <EditText
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_more_spacing"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:clickable="false"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:maxWidth="100dp"
        android:textColor="@color/resultColor"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/resultLabel"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        tools:text="123.45" />

    <Button
        android:id="@+id/shareButton"
        style="@style/Widget.App.ImageButton.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:tint="@color/primaryTextColor"
        app:icon="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="@+id/value_container"
        app:layout_constraintTop_toTopOf="@+id/result" />

    <include
        layout="@layout/footer"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/footer_include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

